# mcerl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  playground.ipynb  pyproject.toml  requirements.txt  test.ipynb  train.py
include/: agent.hpp  algorithms.hpp  common.hpp  env.hpp  grid_map.hpp
rl/: actor_critic.py  network.py  ppo.py  utils.py
src/: algorithms.cpp  env.cpp  pybinds.cpp
src/mcerl/: __init__.py  env.py  utils.py
